fixed spacing between learn.html items

--- a/zenout/css/style.css
+++ b/zenout/css/style.css
@@ -139,3 +139,7 @@ background-image: url("swirl_pattern.png");
 .links {
   padding-top: 20px;
 }
+
+li {
+  margin: 10px;
+}
